# Lupine-OS

./: .gitignore  Apache-2.0-NoHarm-summary.md  CONTRIBUTING.md  Cargo.toml  LICENSE-summary.md  LICENSE.md  Makefile  README.md  SECURITY.md  blog_os-MIT-LICENSE.md  update.sh
.cargo/: config.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  vulnerability-report.md
.github/workflows/: main.yml
JTAG_boot/: Cargo.toml  Makefile  README.md
JTAG_boot/src/: console.rs  driver.rs  main.rs  panic_wait.rs  time.rs
JTAG_boot/src/bsp/: device_driver.rs  raspberrypi.rs
JTAG_boot/src/console/: null_console.rs
chainloader/: Cargo.toml  Makefile  README.md  demo_payload_rpi3.img  demo_payload_rpi4.img  update.sh
chainloader/src/: cube.rs  main.rs  synchronization.rs
chainloader/src/bsp/: raspberrypi.rs
chainloader/tests/: chainboot_test.rb
common/serial/: minipush.rb  miniterm.rb
common/serial/minipush/: progressbar_patch.rb
common/tests/: boot_test.rb  console_io_test.rb  dispatch.rb  exit_code_test.rb  test.rb
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
kernel/: Cargo.toml  Makefile
kernel/src/: bsp.rs  common.rs  cpu.rs  cube.rs  exception.rs  main.rs
kernel/src/exception/: asynchronous.rs
kernel/src/memory/: mmu.rs
os/: Makefile
os/kernel/: Cargo.toml
os/kernel/src/: console.rs  cpu.rs  cube.rs  driver.rs  exception.rs  lib.rs  main.rs  memory.rs  panic_wait.rs  print.rs  state.rs  synchronization.rs  time.rs
os/kernel/tests/: 00_console_sanity.rb  00_console_sanity.rs  01_timer_sanity.rs  02_exception_sync_page_fault.rs  03_exception_restore_sanity.rb  03_exception_restore_sanity.rs  04_exception_irq_sanity.rs
os/libraries/test-macros/: Cargo.toml
source/: Cargo.toml  Makefile  lupine-os.com  run.sh
source/.cargo/: config.toml
source/libcosmo/: ape.lds  cosmopolitan.h
source/src/: cube.rs  driver.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  panic_wait.rs  print.rs  vga_buffer.rs
source/src/_arch/aarch64/: cpu.rs
source/src/bsp/device_driver/: common.rs
source/src/bsp/raspberrypi/: kernel.ld
source/tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
src/: bsp.rs  console.rs  cpu.rs  lib.rs  main.rs  panic_wait.rs  print.rs
src/_arch/aarch64/: cpu.rs
src/bsp/: raspberrypi.rs
src/cpu/: boot.rs
tests/: basic_boot.rs  should_panic.rs
(+69 files in other folders)
