[package]
name = "vansch-os"
version = "0.1.0"
edition = "2021"
authors = ["PitchBlackNights <pitchblacknights@github.com>"]

# Profile used for `cargo build`
[profile.dev]
panic = "abort" # Disable stack unwinding on panic

# Profile used for `cargo build --release`
[profile.release]
panic = "abort" # Disable stack unwinding on panic

[dependencies]
bootloader = "0.11.0"