[package]
name = "vansch-os"
version = "0.1.0"
edition = "2021"
authors = ["PitchBlackNights <pitchblacknights@github.com>"]

# Profile used for `cargo build`
[profile.dev]
panic = "abort" # Disable stack unwinding on panic

# Profile used for `cargo build --release`
[profile.release]
panic = "abort" # Disable stack unwinding on panic

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.9.5"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]