[package]
name = "lupine-os"
version = "0.1.0"
edition = "2021"
authors = [
    "PitchBlackNights <pitchblacknights777@gmail.com>",
    "wsDev0 <wsDev0@github.com>"
]

# Profile used for `cargo build`
#[profile.dev]
#panic = "abort" # Disable stack unwinding on panic

# Profile used for `cargo build --release`
#[profile.release]
#panic = "abort" # Disable stack unwinding on panic

#[[test]]

#[dependencies]

#test-timeout = 300 # In seconds
#test-success-exit-code = 33 # Map exit code 33 to cargo exit code 0